# planilla-BAC

./: .gitignore  Cargo.toml  config.json  config_propina.json  empleados_bac.xlsx
src/: config.rs  employee.rs  formatprn.rs  lib.rs  main.rs  payment.rs  writepay.rs
tests/: 00017_test_salario_ABR.prn  00018_test_viatico_ABR.prn  00019_test_propina_ABR.prn  genout.rs  test_empleados_bac.xlsx
tests/Planilla_ISSS_y_AFP_2021/: 04 GMZ Planilla Operaciones ABR.xlsx
tests/Planilla_Retenciones_2021/: 04 GMZ Planilla de eventuales ABR.xlsx
