[package]
name = "planilla-bac"
version = "0.1.0"
authors = ["P. Zometa <zometa@anixet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.0"
colored = "2.0.0"
text_io = "0.1.8"
