[package]
name = "planilla-bac"
version = "0.2.0"
authors = ["P. Zometa <zometa@anixet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.0"
read_input = "0.8"
thiserror = "1.0"
anyhow = "1.0"
toml = "0.5"